--- a/ERPAnimalia/Content/Site.css
+++ b/ERPAnimalia/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-color:#f39c12 !important;
+    background-color:#bab7b3 !important;
    opacity: 0.9;
 }
 .container-fluid
@@ -67,9 +67,14 @@ input.valid{
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
-select,
-textarea {
+select
+ {
     max-width: 280px;
+}
+
+.textareaNote {
+  width: 800px !important;
+  
 }
 
 
