--- a/ERPAnimalia/Content/css/Voucher.css
+++ b/ERPAnimalia/Content/css/Voucher.css
@@ -29,4 +29,22 @@ input{
     color:#F2F2F2;
     text-align: center;
 }
- 
+
+img {
+   position: absolute;
+  
+   margin-top: 50px; /* Half the height */
+   margin-left:-400px; /* Half the width */
+}
+
+html, body, #wrapper {
+   height:100%;
+   width: 100%;
+   margin: 0;
+   padding: 0;
+   border: 0;
+}
+#wrapper td {
+   vertical-align: middle;
+   text-align: center;
+}
