--- a/ERPAnimalia/Views/ListProduct/PassToLoose.cshtml
+++ b/ERPAnimalia/Views/ListProduct/PassToLoose.cshtml
@@ -18,27 +18,40 @@
              columns: [
              { field: "IdProducto", hidden: true },
              { field: "Codigo", title: "Código", sortable: true, width: 80 },
-             { field: "Marca", title: "Marca", sortable: true, width: 150 },
-             { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 200 },
-             { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 200 },
-              { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 100 },
-             { field: "CategoryName", title: "Categoria", sortable: true, width: 100 },
-             { field: "kg", title: "Kg", sortable: true, width: 80 },
-             { field: "Cantidad", title: "Stock Actual", sortable: true, width: 80 },
-             { field: "TotalKg", title: "Total Kg", sortable: true, width: 80 },
-             { field: "PrecioCosto", title: "Precio Costo", editor: true,sortable: true, width: 80 },
-             { field: "PrecioVenta", title: "Precio Venta",editor: true, sortable: true, width: 80 }
+             { field: "Marca", title: "Marca", sortable: true, width: 80 },
+             { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 100 },
+             { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 100 },
+              { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 50 },
+             { field: "CategoryName", title: "Categoria", sortable: true, width: 50 },
+             { field: "kg", title: "Kg", sortable: true, width: 40 },
+             { field: "Cantidad", title: "Stock Actual", sortable: true, width: 40 },
+             { field: "TotalKg", title: "Total Kg", sortable: true, width: 40 },
+             { field: "PrecioCosto", title: "Precio Costo", editor: true,sortable: true, width: 40 },
+             { field: "PrecioVenta", title: "Precio Venta",editor: true, sortable: true, width: 40 }
 
              ],
              selectionMethod: 'checkbox', 
-             pager: { enable: true, limit: 5, sizes: [2, 5, 10, 20] }
+             pager: { enable: true, limit:30, sizes: [2, 5, 10, 20] }
          });
          
 
          $("#btnSearchProductBug").on("click", SearchProductBug);
          $("#btnSearchProductLoose").on("click", SearchProductLoose);
-             $("#btnSave").on("click", Save);
+         $("#btnSave").on("click", Save);
 
+         $('#searchLoose').keypress(function (event) {
+             debugger;
+             if (event.keyCode == 13) {
+                 $("#btnSearchProductLoose").click();
+             }
+         });
+
+         $('#searchBug').keypress(function (event) {
+             debugger;
+             if (event.keyCode == 13) {
+                 $("#btnSearchProductBug").click();
+             }
+         });
 
 
              gridProductLoose = $("#gridProductLoose").grid({
@@ -47,19 +60,19 @@
                  columns: [
                  { field: "IdProducto", hidden: true },
                  { field: "Codigo", title: "Código", sortable: true, width: 80 },
-                 { field: "Marca", title: "Marca", sortable: true, width: 150 },
-                 { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 200 },
-                 { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 200 },
-                 { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 100 },
-                 { field: "CategoryName", title: "Categoria", sortable: true, width: 100 },
-                 { field: "kg", title: "Kg", sortable: true, width: 80 },
-                 { field: "TotalKg", title: "Stock Actual", sortable: true, width: 80 },
-                 { field: "PrecioCosto", title: "Precio Costo", editor: true,sortable: true, width: 80 },
-                 { field: "PrecioVenta", title: "Precio Venta",editor: true, sortable: true, width: 80 }
+                 { field: "Marca", title: "Marca", sortable: true, width: 80 },
+                 { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 100 },
+                 { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 100 },
+                 { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 50 },
+                 { field: "CategoryName", title: "Categoria", sortable: true, width: 50 },
+                 { field: "kg", title: "Kg", sortable: true, width: 40 },
+                 { field: "TotalKg", title: "Stock Actual", sortable: true, width: 40 },
+                 { field: "PrecioCosto", title: "Precio Costo", editor: true,sortable: true, width: 40 },
+                 { field: "PrecioVenta", title: "Precio Venta",editor: true, sortable: true, width: 40 }
 
                  ],
                  selectionMethod: 'checkbox', 
-                 pager: { enable: true, limit: 5, sizes: [2, 5, 10, 20] }
+                 pager: { enable: true, limit: 1000, sizes: [2, 5, 10, 20] }
              });
 
             
@@ -71,39 +84,12 @@
          });
 
 
-     
-     //function CalculateTotal(record,e,row)
-     //{
-     //    debugger;
-     //    var selectionRowLoose = gridProductLoose.getSelections();
-     //    var selectionRowBug= gridProductBug.getSelections();
-     //    if(selectionRowLoose.length != 0 &&  selectionRowBug.length != 0  )
-     //    {
-     //        record.TotalKg = parseFloat(record.CantidadAgregarSuelto) + parseFloat( record.TotalKg);
-     //        gridProductLoose.updateRow(selectionRowLoose, { 'IdProducto': record.IdProducto,'Codigo':record.Codigo,'Marca':record.Marca, 'Descripcion1':record.Descripcion1, 'Descripcion2':record.Descripcion2,'SubCategoryName':record.SubCategoryName,'CategoryName':record.CategoryName,'kg' : record.kg,
-     //            'CantidadAgregarSuelto':record.CantidadAgregarSuelto, 'TotalKg':  record.TotalKg,'PrecioCosto':record.PrecioCosto,'PrecioVenta':record.PrecioVenta});
-     //        gridProductLoose.setSelected(selectionRowLoose);
-         
-     //    }
-     //    else  if(selectionRowLoose.length == 0)
-     //    {
-     //        alert("Debe Seleccionar un Item en la grilla Producto Suelto");
-     //    }
-     //    else  if(selectionRowBug.length == 0)
-     //    {
-     //        alert("Debe Seleccionar un Item en la grilla Alimentos Bolsas");
-     //    }
-        
-         
-     //}
      function SearchProductLoose() {
-           
-             gridProductLoose.reload({ searchString: $("#searchLoose").val() });
+         gridProductLoose.reload({ searchString: $("#searchLoose").val() });
          }
 
          function SearchProductBug() {
-            
-             gridProductBug.reload({ searchString: $("#searchsearchBug").val() });
+             gridProductBug.reload({ searchString: $("#searchBug").val() });
          }
 
 
@@ -157,7 +143,7 @@
             <div class="panel-heading">Producto Bolsa</div>
             <div class="panel-body">
                 <div class="form-group row">
-                    <div class="col-md-3 col-md-offset-1">
+                    <div class="col-md-2">
                         <div class="input-group">
                             <input type="text" id="searchBug" class="form-control" placeholder="Search for...">
                             <span class="input-group-btn">
@@ -179,7 +165,7 @@
             <div class="panel-heading">Producto Suelto</div>
             <div class="panel-body">
                 <div class="form-group row">
-                    <div class="col-md-3 col-md-offset-1">
+                    <div class="col-md-2">
                         <div class="input-group">
                             <input type="text" id="searchLoose" class="form-control" placeholder="Search for...">
                             <span class="input-group-btn">
