--- a/ERPAnimalia/Views/Shared/_Layout.cshtml
+++ b/ERPAnimalia/Views/Shared/_Layout.cshtml
@@ -49,7 +49,9 @@
                     <ul class="dropdown-menu">
                         <li>@Html.ActionLink("Producto","Index", "ListProduct")</li>
                         <li>@Html.ActionLink("Cliente","Index", "Cliente")</li>
+                        <li>@Html.ActionLink("Pasar a suelto", "Suelto", "Producto")</li>
                         <li>@Html.ActionLink("Factura", "CrearFactura", "Factura")</li>
+                       
 
                     </ul>
                 </li>
@@ -57,12 +59,10 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Compras <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>@Html.ActionLink("Proveedor", "Index", "Provider")</li>
-                        <li>@Html.ActionLink("Nota de Pedido", "Index", "LoadOrder")</li>
-                        <li><a href="#">Articulo</a></li>
-                        <li><a href="#">Factura</a></li>
+                        <li>@Html.ActionLink("Nota de Pedido", "Index", "LoadOrder")</li>                 
                     </ul>
                 </li>
-                <li><a href="#">Page 2</a></li>
+               
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -75,9 +75,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        @*<footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        </footer>*@
     </div>
 
     @*@Scripts.Render("~/bundles/jquery")*@
