--- a/ERPAnimalia/Views/LoadOrder/DetailLoadOrder.cshtml
+++ b/ERPAnimalia/Views/LoadOrder/DetailLoadOrder.cshtml
@@ -16,6 +16,7 @@
              uiLibrary: "bootstrap",
              columns: [
              { field: "IdProducto", hidden: true },
+             { field: "CodigoBarra", title: "Código de Barra", sortable: true, width: 80 },
              { field: "Codigo", title: "Código", sortable: true, width: 80 },
              { field: "Marca", title: "Marca", sortable: true, width: 150 },
              { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 200 },
