--- a/ERPAnimalia/Views/ListProduct/Index.cshtml
+++ b/ERPAnimalia/Views/ListProduct/Index.cshtml
@@ -19,20 +19,21 @@
                 uiLibrary: "bootstrap",
                 columns: [
                 { field: "IdProducto", hidden: true },
+                { field: "CodigoBarra", title: "Código de Barra", sortable: true, width: 90 },
                 { field: "Codigo", title: "Código", sortable: true, width: 80 },
                 { field: "Marca", title: "Marca", sortable: true, width: 80 },
-                { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 120 },
-                { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 120 },
-                { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 100 },
-                { field:"CategoryName", title: "Categoria", sortable: true, width: 100 },
-                { field: "kg", title: "Kg", sortable: true, width: 80 },
-                { field: "Cantidad", title: "Cantidad", sortable: true, width: 80 },
-                { field: "PrecioCosto", title: "Precio Costo", sortable: true, width: 80 },
-                { field: "PrecioVenta", title: "Precio Venta", sortable: true, width: 80 },
-                { field: "RentabilidadPesos", title: "Renabilidad $", sortable: true, width: 80 },
-                { field: "Rentabilidad", title: "Renabilidad %", sortable: true, width: 80 },
+                { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 80 },
+                { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 80 },
+                { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 80 },
+                { field:"CategoryName", title: "Categoria", sortable: true, width: 80 },
+                { field: "kg", title: "Kg", sortable: true, width: 30 },
+                { field: "Cantidad", title: "Cant.", sortable: true, width: 40 },
+                { field: "PrecioCosto", title: "Precio Costo", sortable: true, width: 50 },
+                { field: "PrecioVenta", title: "Precio Venta", sortable: true, width: 50 },
+                { field: "RentabilidadPesos", title: "Renab$", sortable: true, width: 50 },
+                { field: "Rentabilidad", title: "Renab%", sortable: true, width: 50 },
                 {
-                    width: 90, tmpl: '<a href="#">Edit</a>', align: 'center', events: {
+                    width: 30,icon: "glyphicon-pencil", type: "icon", align: 'center', events: {
                         'click': function (e) {
                             id = e.data.record.IdProducto;
                             location.href='@Url.Action("Edit","Product")?ids=' + id;
@@ -40,7 +41,7 @@
                     }
                 },
                 {
-                    width: 90, tmpl: '<a href="#">delete</a>', align: 'center', events: {
+                    width: 30,  type: "icon", icon: "glyphicon-remove", align: 'center', events: {
                         'click': function (e) {
                             id = e.data.record.IdProducto;
                             location.href = '@Url.Action("Delete","Product")?id=' + id;
@@ -76,12 +77,12 @@
 
     </script>
 
-
+    
     <div class="panel panel-primary">
         <div class="panel-heading">Producto</div>
         <div class="panel-body">
             <div class="form-group row">
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="input-group">
                         <input type="text" id="search" class="form-control" placeholder="Search for...">
                         <span class="input-group-btn">
@@ -95,7 +96,12 @@
             </div>
         </div>
         <br />
-        <table id="gridProduct" data-source="@Url.Action("GetProduct")"></table>
+        <div class="container-fluid">
+            <div class="row">
+                <table id="gridProduct" data-source="@Url.Action("GetProduct")"></table>
+            </div>
+        </div>
+        
     </div>
 
 </body>
